# GKIM

./: .env.example  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts  vitest.config.ts
.github/workflows/: android-tag-release.yml
android/: README.md  settings.gradle.kts  ui-back.xml  ui-detail-scrolled.xml  ui-detail.xml  ui-msgs.xml
android/app/: build.gradle.kts
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
backend/migrations/: 202604080001_bootstrap_im_schema.sql  202604100001_auth_and_friend_requests.sql  202604160001_direct_message_attachments.sql
backend/scripts/: bootstrap-ubuntu.sh  debug-service.sh  smoke-health.sh  smoke-session.sh
backend/src/: app.rs  auth.rs  config.rs  lib.rs  main.rs  migrations.rs  session.rs  social.rs  ws.rs
backend/src/im/: model.rs  repository.rs  service.rs
backend/systemd/: gkim-im-backend.service
backend/tests/: http_im_api.rs  im_service_pg.rs  migrations_schema.rs  ws_gateway.rs
certs/: aiven-postgres-ca.pem
docs/: AGENTS.md  ARCHITECTURE.md  DELIVERY_WORKFLOW.md  DESIGN_SYSTEM.md  QUALITY_SCORE.md  android-tag-release-operations.md  project-tech-showcase.md
docs/skins/: placeholder-generation.md  placeholder-generation.zh.md
infra/: README.md
infra/certs/: README.md
openspec/: config.yaml
ops/skins-staging/: .gitkeep
scripts/: android-release-tools.psm1  release-android-tag.ps1
scripts/tests/: android-release-tools.Tests.ps1
src/: App.vue  env.d.ts  main.ts  manifest.json  pages.json  uni.scss
src/components/: AppHeader.vue  (+5 more)
tests/: markdown.spec.ts  setup.ts  sort.spec.ts  useAIGC.spec.ts  useCreativeWorkshop.spec.ts
(+695 files in other folders)
